Fix search page results overflow problem

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -149,6 +149,7 @@
   width: 372px;
   float: left;
   display: block;
+  overflow: auto;
   height: calc(100% - 60px);
   box-shadow: -0px 0 3px rgba(0,0,0,0.2);
 
